fixed tag page spacing

--- a/pages/tag/TagPage.module.css
+++ b/pages/tag/TagPage.module.css
@@ -9,7 +9,7 @@
     /* grid-template-columns: 1fr 1fr 1fr; */
     /* grid-auto-columns: max-content;
     grid-auto-flow: column; */
-    grid-template-columns: repeat(auto-fit, 350px);
+    grid-template-columns: repeat(auto-fit, 400px);
     box-sizing: border-box;
     /* padding: 30px; */
     /* width: 80vw; */
